dataset1235/2025-2/1153765216/users/230013788/executions/3138746197_3788368433.log
== SUBMISSION (2025-08-18 23:23:36)
-- CODE: 
nome = input("joao")
print("")
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
Gandalf
---- correct output:
Gandalf
---- user output:
joao
-- TEST CASE 2:
---- input:
Donald Knuth
---- correct output:
Donald Knuth
---- user output:
joao
-- TEST CASE 3:
---- input:
Python
---- correct output:
Python
---- user output:
joao
-- TEST CASE 4:
---- input:
Ada Lovelace
---- correct output:
Ada Lovelace
---- user output:
joao
-- TEST CASE 5:
---- input:
Teste
---- correct output:
Teste
---- user output:
joao
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-18 23:23:26)
-- CODE: 
nome = input("joao")
print("") = nome 
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
Gandalf
---- correct output:
Gandalf
-- ERROR:
File "XXXX", line 2
    print("") = nome 
    ^^^^^^^^^
SyntaxError: cannot assign to function call here. Maybe you meant '==' instead of '='?
-- TEST CASE 2:
---- input:
Donald Knuth
---- correct output:
Donald Knuth
-- ERROR:
File "XXXX", line 2
    print("") = nome 
    ^^^^^^^^^
SyntaxError: cannot assign to function call here. Maybe you meant '==' instead of '='?
-- TEST CASE 3:
---- input:
Python
---- correct output:
Python
-- ERROR:
File "XXXX", line 2
    print("") = nome 
    ^^^^^^^^^
SyntaxError: cannot assign to function call here. Maybe you meant '==' instead of '='?
-- TEST CASE 4:
---- input:
Ada Lovelace
---- correct output:
Ada Lovelace
-- ERROR:
File "XXXX", line 2
    print("") = nome 
    ^^^^^^^^^
SyntaxError: cannot assign to function call here. Maybe you meant '==' instead of '='?
-- TEST CASE 5:
---- input:
Teste
---- correct output:
Teste
-- ERROR:
File "XXXX", line 2
    print("") = nome 
    ^^^^^^^^^
SyntaxError: cannot assign to function call here. Maybe you meant '==' instead of '='?
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-18 23:24:00)
-- CODE: 
nome = input("joao")
print("", nome)
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
Gandalf
---- correct output:
Gandalf
---- user output:
joao Gandalf
-- TEST CASE 2:
---- input:
Donald Knuth
---- correct output:
Donald Knuth
---- user output:
joao Donald Knuth
-- TEST CASE 3:
---- input:
Python
---- correct output:
Python
---- user output:
joao Python
-- TEST CASE 4:
---- input:
Ada Lovelace
---- correct output:
Ada Lovelace
---- user output:
joao Ada Lovelace
-- TEST CASE 5:
---- input:
Teste
---- correct output:
Teste
---- user output:
joao Teste
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-18 23:23:29)
-- CODE: 
nome = input("joao")
print("") = nome 
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
Gandalf
---- correct output:
Gandalf
-- ERROR:
File "XXXX", line 2
    print("") = nome 
    ^^^^^^^^^
SyntaxError: cannot assign to function call here. Maybe you meant '==' instead of '='?
-- TEST CASE 2:
---- input:
Donald Knuth
---- correct output:
Donald Knuth
-- ERROR:
File "XXXX", line 2
    print("") = nome 
    ^^^^^^^^^
SyntaxError: cannot assign to function call here. Maybe you meant '==' instead of '='?
-- TEST CASE 3:
---- input:
Python
---- correct output:
Python
-- ERROR:
File "XXXX", line 2
    print("") = nome 
    ^^^^^^^^^
SyntaxError: cannot assign to function call here. Maybe you meant '==' instead of '='?
-- TEST CASE 4:
---- input:
Ada Lovelace
---- correct output:
Ada Lovelace
-- ERROR:
File "XXXX", line 2
    print("") = nome 
    ^^^^^^^^^
SyntaxError: cannot assign to function call here. Maybe you meant '==' instead of '='?
-- TEST CASE 5:
---- input:
Teste
---- correct output:
Teste
-- ERROR:
File "XXXX", line 2
    print("") = nome 
    ^^^^^^^^^
SyntaxError: cannot assign to function call here. Maybe you meant '==' instead of '='?
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-18 23:23:38)
-- CODE: 
nome = input("joao")
print("")
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
Gandalf
---- correct output:
Gandalf
---- user output:
joao
-- TEST CASE 2:
---- input:
Donald Knuth
---- correct output:
Donald Knuth
---- user output:
joao
-- TEST CASE 3:
---- input:
Python
---- correct output:
Python
---- user output:
joao
-- TEST CASE 4:
---- input:
Ada Lovelace
---- correct output:
Ada Lovelace
---- user output:
joao
-- TEST CASE 5:
---- input:
Teste
---- correct output:
Teste
---- user output:
joao
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
